# Demo-React-Django-Firebase

./: README.md
backend/: Dockerfile  pyproject.toml
backend/apps/users/api/: urls.py
backend/apps/users/api/serializers/: __init__.py  users.py
backend/apps/users/api/views/: __init__.py  users.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/models/: mixins.py  users.py
backend/portfolio/: settings.py  urls.py
backend/portfolio/firebase_conf/: authentication.py  firebase_config.py
environment/: dev.env  prod.env
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  firebase.js  index.js
frontend/src/api/: config.js  core_api.js
frontend/src/pages/: Login.jsx  Signup.jsx
frontend/src/redux/: rootReducers.js  store.js  userReducer.js
infrastructure/docker/dev/: docker-compose.yml
